# Facultate

./: README.md
Anul_1_Sem_1/FP/Baschet/: baschet.txt  jucatori.txt  main.py
Anul_1_Sem_1/FP/Emisiuni/: emisiuni.txt  main.py  test_emisiuni.txt
Anul_1_Sem_1/FP/Evenimente/: evenimente.txt  export  main.py
Anul_1_Sem_1/FP/Muzica/: main.py  muzica.csv  muzica.txt
Anul_1_Sem_1/FP/OrganizareEvenimente/: evenimente.txt  inscriere.txt  main.py  persoane.txt  test_evenimente.txt
Anul_1_Sem_1/FP/Tractoare/: main.py  tractoare.txt
Anul_1_Sem_2/Grafuri/Pregatire_partial_1/: bfs.cpp  dfs.cpp  dijkstra.cpp  dijkstra_vector.cpp  dist_2_rase_euclidiana.cpp  drum_minim_de_la_x_la_y.cpp  graf_aciclic.cpp  relatii_de_prietenie.cpp
Anul_1_Sem_2/Grafuri/Pregatire_partial_2/: CMakeLists.txt  main.cpp  s2.cpp  s3.cpp
Anul_1_Sem_2/Grafuri/Test_lab_2/: CMakeLists.txt  main.cpp
Anul_1_Sem_2/OOP/Lab/Lab_10-11/: CMakeLists.txt  cos.html  main.cpp
Anul_1_Sem_2/OOP/Lab/Lab_10-11/cos_inchirieri/: cos_inchirieri.cpp  cos_inchirieri.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/domain/: carte.cpp  carte.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/model_view/: cos_model.cpp  cos_model.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/observer/: observer.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/repository/: carte_repo.cpp  carte_repo.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/service/: carte_service.cpp  carte_service.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/tests/: tests.cpp  tests.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/undo/: undo.h
Anul_1_Sem_2/OOP/Lab/Lab_10-11/windows/: cosCRUDGUI.cpp  cosCRUDGUI.h  cosReadOnlyGUI.cpp  cosReadOnlyGUI.h  cos_window.cpp  cos_window.h  mainwindow.cpp  mainwindow.h
Anul_1_Sem_2/OOP/Lab/Lab_2-4/Pb 8/: CMakeLists.txt  list.c  list.h  main.c  produs.c  produs.h  service.c  service.h  test.c  test.h  ui.c  ui.h  validare.c  validare.h
Anul_1_Sem_2/OOP/Lab/Lab_5_(fmm_paul)/: CMakeLists.txt  CodeReviewTemplate.odt  cerinta.txt  list.c  list.h  main.c  oferte.c  oferte.h  service.c  service.h  teste.c  teste.h  ui.c  ui.h  validare.c  validare.h
Anul_1_Sem_2/OOP/Lab/Lab_6-7/: CMakeLists.txt  cos.csv  main.cpp
Anul_1_Sem_2/OOP/Lab/Lab_6-7/cos_inchirieri/: cos_inchirieri.cpp  cos_inchirieri.h
Anul_1_Sem_2/OOP/Lab/Lab_6-7/exceptions/: exceptii.h
Anul_1_Sem_2/OOP/Lab/Lab_6-7/service/: carte_service.cpp  carte_service.h
Anul_1_Sem_2/OOP/Lab/Lab_6-7/tests/: tests.cpp  tests.h
Anul_1_Sem_2/OOP/Lab/Lab_6-7/ui/: console.cpp  console.h
Anul_1_Sem_2/OOP/Lab/Lab_6-7/vector_dinamic/: lista.h
Anul_1_Sem_2/OOP/Lab/lab2-4/: CMakeLists.txt  main.c
Anul_1_Sem_2/OOP/Lab/lab2-4/domain/: oferta.c  oferta.h
Anul_1_Sem_2/OOP/Lab/lab2-4/repo/: repo_oferte.c  repo_oferte.h
Anul_1_Sem_2/OOP/Lab/lab2-4/service/: service.c  service.h
Anul_1_Sem_2/OOP/Lab/lab2-4/teste/: teste.c  teste.h
Anul_1_Sem_2/OOP/Lab/lab2-4/ui/: consola.c  consola.h
Anul_1_Sem_2/OOP/Lab/lab2-4/validator/: validator.c  validator.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_1/: CMakeLists.txt  main.cpp
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_1/domain/: melodie.cpp  melodie.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_1/gui/: main_window.cpp  main_window.h  melodie_model.cpp  melodie_model.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_1/repository/: melodie_repo.cpp  melodie_repo.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_1/service/: melodie_service.cpp  melodie_service.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/: CMakeLists.txt  main.cpp
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/domain/: melodie.cpp  melodie.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/gui/: gen_circle_widget.cpp  gen_circle_widget.h  main_window.cpp  main_window.h  melodie_model.cpp  melodie_model.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/repository/: melodii_repo.cpp  melodii_repo.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/service/: melodii_service.cpp  melodii_service.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/tests/: tests.cpp  tests.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Melodii_2/validator/: validator.cpp  validator.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/: CMakeLists.txt  main.cpp
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/domain/: produs.cpp  produs.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/gui/: main_window.cpp  main_window.h  produs_model.cpp  produs_model.h  tip_window.cpp  tip_window.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/observer/: observable.h  observer.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/repository/: produse_repo.cpp  produse_repo.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/service/: produse_service.cpp  produse_service.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/tests/: tests.cpp  tests.h
Anul_1_Sem_2/OOP/Pregatire_sesiune/Produse/validator/: validator.cpp  validator.h
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD Colectie/: CMakeLists.txt
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD Colectie/Proiect_C++/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD Colectie/Teste/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD MultiDictionar/: CMakeLists.txt  pseudocod.txt
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD MultiDictionar/Proiect C++/: IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD MultiDictionar/Teste/: TestScurt.cpp
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD Multime/: CMakeLists.txt  pseudocod.txt
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD Multime/Proiect C++/Multime (cu rel)/: IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h
Anul_1_Sem_2/SDA/Lab/Interfete TAD (proiecte C++) si teste/TAD Multime/Teste(cu relatie)/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
Anul_2_Sem_1/DB/Seminar/: Seminar2.pptx  Seminar3.pptx  Seminar4.pptx  Seminar5.pptx  seminar2.sql  seminar3.sql  seminar4.sql  seminar5.sql
Anul_2_Sem_1/MAP/Seminar/: sem8.7z  sem9.7z  (+1 more)
(+1165 files in other folders)
